update task-manager.yml, added controller,service and repository
