# src/main/java/com/hrv/taskmanager/repository/entity/UserEntity.java
@@ -1,0 +1,43 @@
+package com.hrv.taskmanager.repository.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.util.UUID;
+
+/**
+ * UserEntity
+ */
+@Getter
+@Setter
+@Entity
+@Table(name = "users")
+public class UserEntity {
+
+    @Id
+    @Column(name = "id")
+    private UUID id;
+    @Column(name = "name")
+    private String name;
+    @Column(name = "surname")
+    private String surname;
+    @Column(name = "email")
+    private String email;
+    @Column(name = "otp")
+    private String otp;
+    @Column(name = "seed")
+    private String seed;
+    @Column(name = "role")
+    private String role;
+    @Column(name = "created_at")
+    private String createdAt;
+    @Column(name = "updated_at")
+    private String updatedAt;
+    @Column(name = "due_date")
+    private String dueDate;
+
+}
